# SpTubeBot

./: .dockerignore  .gitignore  Dockerfile  cmds.go  go.mod  go.sum  load_modules.go  main.go  pyproject.toml  requirements.txt  sample.env
.github/: README.md
config/: config.go
src/: __init__.py  cb_song.go  clone.go  config.py  inline.go  inline_song.go  load_modules.go  privacy.go  savesnap.go  song.go  start.go  utils.go  yt-dlp.go
src/config/: config.go  db.go
src/modules/: _utils.py  callback.py  inline.py  snap.py  song.py  start.py
src/utils/: __init__.py  _api.py  _cache.py  _dataclass.py  _downloader.py  _filters.py  api.go  dataclass.go  download_zip.go  downloader.go  spotify.go  utils.go
